added text to about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-
+            <p>This site war created by Andy.</p>
             <img src="./images/andy.jpg" class="portrait">
 
         </div>
